# code-spot

./: README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/backend/: app.py
backend/scripts/: scripts.py
robot-control-server/python/examples/wasd_server/: app.py  wasd.py
spotter/: README.md  bun.lockb  components.json  package.json
spotter/components/: controls.tsx  layout.tsx  navbar.tsx  transcription-table.tsx  webcam.tsx
spotter/components/data-table/: data-table.tsx
spotter/pages/: _app.tsx  audio.tsx  index.tsx
spotter/pages/api/: audio.ts
spotter/pages/api/robot/: [move].ts
